--- a/#src/html/components/_footer.html
+++ b/#src/html/components/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer parallax">
 	<div class="container">
 		<div class="footer-content">
 			<div class="footer-contacts">
