--- a/#src/scss/general/_global.scss
+++ b/#src/scss/general/_global.scss
@@ -81,14 +81,14 @@ a {
 	color: inherit;
 }
 
-.parallax-wrapper {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	overflow: hidden;
-}
+// .parallax-wrapper {
+// 	width: 100%;
+// 	height: 100%;
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	overflow: hidden;
+// }
 
 .container {
 	margin: 0 auto;
@@ -120,12 +120,14 @@ a {
 // 	}
 // }
 
-.section {
-	overflow: hidden;
-
-	position: absolute;
-	will-change: transform;
+.parallax {
+	position: fixed;
+	// left: 0;
 	width: 100%;
+	will-change: transform;
+}
+
+.section {
 	min-height: 100vh;
 
 	.anchor {
