--- a/css/style.css
+++ b/css/style.css
@@ -510,26 +510,19 @@ a {
   color: inherit;
 }
 
-.parallax-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-}
-
 .container {
   margin: 0 auto;
   padding: 0 15px;
   max-width: 1350px;
 }
 
-.section {
-  overflow: hidden;
-  position: absolute;
-  will-change: transform;
+.parallax {
+  position: fixed;
   width: 100%;
+  will-change: transform;
+}
+
+.section {
   min-height: 100vh;
 }
 
@@ -1109,6 +1102,7 @@ a {
 }
 
 .section-feedback {
+  height: 100vh;
   overflow: hidden;
 }
 
